--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to agwy's homepage!
+description: Feel free to bookmark this page to stay updated on my future projects
