--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
 title: Welcome to agwy's homepage!
 description: Feel free to bookmark this page to stay updated on my future projects
+
+
+remote_theme: alshedivat/al-folio
